Fix: Adjust star gap to 4px and refine vertical spacing

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -9,23 +9,27 @@
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
+  padding: 0 16px;
+  align-items: center;
   box-sizing: border-box;
 }
 
 .card__img {
-  padding: 32px 16px 40px;
+  padding: 32px 0 40px;
 }
 
 .card__content {
-  padding: 0 16px 16px;
+  padding: 0 0 16px;
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
 }
 
 .card__title {
   width: 100%;
   margin: 0;
+  font-weight: 500;
   font-size: 12px;
   line-height: 18px;
   letter-spacing: 0%;
@@ -53,7 +57,7 @@
 }
 
 .card__price {
-  margin-top: auto;
+  margin-top: 16px;
   margin-bottom: 12px;
   display: flex;
   justify-content: space-between;
