--- a/src/styles/blocks/stars.scss
+++ b/src/styles/blocks/stars.scss
@@ -1,6 +1,6 @@
 .stars {
   display: flex;
-  gap: 2px;
+  gap: 4px;
   padding: 0;
 }
 
